--- a/app/src/main/res/layout/activity_stats.xml
+++ b/app/src/main/res/layout/activity_stats.xml
@@ -137,7 +137,7 @@
         tools:text="0" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/deleteSquaresButton"
         android:layout_width="84dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
@@ -148,7 +148,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/deleteCirclesButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
@@ -158,11 +158,11 @@
         android:layout_marginStart="8dp"
         android:text="@string/delete"
         app:layout_constraintBottom_toTopOf="@+id/imageView4"
-        app:layout_constraintEnd_toStartOf="@+id/button3"
-        app:layout_constraintStart_toEndOf="@+id/button" />
+        app:layout_constraintEnd_toStartOf="@+id/deleteTrianglesButton"
+        app:layout_constraintStart_toEndOf="@+id/deleteSquaresButton" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/deleteTrianglesButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
@@ -171,4 +171,16 @@
         android:text="@string/delete"
         app:layout_constraintBottom_toTopOf="@+id/imageView6"
         app:layout_constraintEnd_toEndOf="parent" />
+
+
+    <Button
+        android:id="@+id/backToMainActivityButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:text="Back"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </android.support.constraint.ConstraintLayout>
